--- a/ToDo/AndroidManifest.xml
+++ b/ToDo/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="br.com.alexisoliveira.todo.ActivityPrincipal"
             android:label="@string/app_name" >
@@ -21,6 +22,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="br.com.alexisoliveira.todo.ActivityCadastrarUsuario"
+            android:label="@string/title_activity_cadastrar_usuario" >
+        </activity>
+        <activity
+            android:name="br.com.alexisoliveira.todo.ActivityListaTarefas"
+            android:label="@string/title_activity_activity_lista_tarefas" >
         </activity>
     </application>
 
