--- a/ToDo/AndroidManifest.xml
+++ b/ToDo/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="br.com.alexisoliveira.todo.ActivityPrincipal"
             android:label="@string/app_name" >
@@ -30,6 +29,10 @@
         <activity
             android:name="br.com.alexisoliveira.todo.ActivityListaTarefas"
             android:label="@string/title_activity_activity_lista_tarefas" >
+        </activity>
+        <activity
+            android:name="br.com.alexisoliveira.todo.ActivityCadastrarTarefa"
+            android:label="@string/title_activity_activity_cadastrar_tarefa" >
         </activity>
     </application>
 
