--- a/ToDo/AndroidManifest.xml
+++ b/ToDo/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
@@ -28,11 +28,15 @@
         </activity>
         <activity
             android:name="br.com.alexisoliveira.todo.ActivityListaTarefas"
-            android:label="@string/title_activity_activity_lista_tarefas" >
+            android:label="@string/title_activity_lista_tarefas" >
         </activity>
         <activity
             android:name="br.com.alexisoliveira.todo.ActivityCadastrarTarefa"
-            android:label="@string/title_activity_activity_cadastrar_tarefa" >
+            android:label="@string/title_activity_cadastrar_tarefa" >
+        </activity>
+        <activity
+            android:name="br.com.alexisoliveira.todo.ActivityFinalizarTarefa"
+            android:label="@string/title_activity_activity_finalizar_tarefa" >
         </activity>
     </application>
 
